@@ -1,5 +1,10 @@
 2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Builder.cs:
+	* DBHost.generated.cs: Add support for disabling hosts.
+
+2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* DBMatchMode.cs:
 	* DBDeleteCondition.cs:
 	* DBLaneDeletionDirective.cs:
